// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Themes: Match Snapshots 1 1`] = `
<View>
  <Themed.ListItem
    containerStyle={
      Object {
        "backgroundColor": "#FFF",
      }
    }
    title={
      <Text
        style={
          Object {
            "color": "#009CFF",
            "fontFamily": "Roboto",
            "fontSize": 12,
          }
        }
      >
        Themes
      </Text>
    }
    titleStyle={
      Object {
        "paddingBottom": 5,
        "paddingTop": 20,
      }
    }
  />
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#FFF",
      }
    }
    switch={
      Object {
        "onValueChange": [Function],
        "thumbColor": "white",
        "trackColor": Object {
          "false": "gray",
          "true": "#009CFF",
        },
        "value": false,
      }
    }
    title="Dark Mode"
    titleStyle={
      Array [
        Object {
          "fontFamily": "Roboto-Light",
        },
        Object {
          "color": "#17212D",
        },
      ]
    }
    topDivider={true}
  />
</View>
`;

exports[`Themes: Match Snapshots 2 1`] = `
<View>
  <Themed.ListItem
    containerStyle={
      Object {
        "backgroundColor": "#17212D",
      }
    }
    title={
      <Text
        style={
          Object {
            "color": "#009CFF",
            "fontFamily": "Roboto",
            "fontSize": 12,
          }
        }
      >
        Themes
      </Text>
    }
    titleStyle={
      Object {
        "paddingBottom": 5,
        "paddingTop": 20,
      }
    }
  />
  <Themed.ListItem
    bottomDivider={true}
    containerStyle={
      Object {
        "backgroundColor": "#17212D",
      }
    }
    switch={
      Object {
        "onValueChange": [Function],
        "thumbColor": "white",
        "trackColor": Object {
          "false": "gray",
          "true": "#009CFF",
        },
        "value": false,
      }
    }
    title="Dark Mode"
    titleStyle={
      Array [
        Object {
          "fontFamily": "Roboto-Light",
        },
        Object {
          "color": "#FFF",
        },
      ]
    }
    topDivider={true}
  />
</View>
`;
